# bsky-follow-recommender

./: .cursorrules  package-lock.json
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  run.py
backend/app/: main.py  server.py
backend/app/api/endpoints/: recommendations.py
backend/app/bluesky/: api.py  auth.py  recommenders.py
backend/app/core/: config.py  exceptions.py  logger.py
backend/app/dependencies/: auth.py  bluesky.py
backend/app/models/: auth.py  profile.py  recommendations.py  user.py
backend/app/models/schemas/: responses.py
backend/app/routers/: auth.py  profile.py  recommendations.py
backend/app/services/bluesky/: __init__.py  client.py
backend/app/services/recommendations/: __init__.py  user_recommender.py
backend/app/services/recommenders/: base.py  basic.py  common_followers.py
backend/scripts/: test_bluesky_auth.py  test_endpoints.py  test_recommendations.py  test_recommenders.py
frontend/: .gitignore  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/(auth)/login/: page.tsx
frontend/app/login/: page.tsx
frontend/app/recommendations/: page.tsx
frontend/components/auth/: login-form.tsx
frontend/components/recommendations/: follow-card.tsx  profile-card.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
