[project]
name = "bluesky-recommender"
version = "0.1.0"
description = "Blue Sky follower recommendations"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"] 