[project]
name = "bluesky-recommender"
version = "0.1.0"
description = "Blue Sky follower recommendations"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "N",  # pep8-naming
    "D",  # pydocstyle
    "UP", # pyupgrade
    "ANN", # flake8-annotations
    "RUF", # Ruff-specific rules
]
ignore = [
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "ANN101",  # Missing type annotation for self in method
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]  # Disable docstring and annotation checks for tests

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"] 